--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -3,4 +3,5 @@ RUN yum install httpd php php-mysql php-gd php-xml mariadb-server mariadb php-mb
 WORKDIR /root/mediawikiapp
 COPY mediawiki/ /var/www/html/
 EXPOSE 80
+ARG ""
 CMD ["/usr/sbin/httpd","-D","FOREGROUND"]
